# StoraTrack

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  DEPLOYMENT.md  Dockerfile  ERRORES_CONOCIDOS.md  GUIA_RAPIDA.md  MANUAL_DE_USUARIO.md  Makefile  README.md  clean_test_data.py  create_test_data.py  docker-compose.dev.yml  docker-compose.yml  fix_location_types.py  main.py  manual_testing_guide.md  production_config.py  pyproject.toml  requirements.txt  security_check.py  test_app.py
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  init_db.py  models.py  schemas.py  seeds.py
app/api/: cost_reports.py  labels.py
app/routers/: admin.py  api.py  auth.py  client.py
app/services/: cost_calculator.py  label_generator.py  report_generator.py
app/utils/: cache.py  datetime_utils.py  pagination.py
migrations/: add_location_enhancements.py
static/css/: loading-states.css
static/js/: form-handler.js
templates/: app_info.html  base.html  index.html
templates/admin/: companies.html  company_detail.html  company_edit.html  dashboard.html  device_detail.html  device_edit.html  devices.html  help_staff.html  help_superadmin.html  labels.html  location_detail.html  location_edit.html  locations.html  reports.html  settings.html  tags.html  user_detail.html  user_edit.html  users.html
templates/auth/: login.html  profile.html
templates/client/: dashboard.html  device_detail.html  devices.html  help_client.html  reports.html
templates/components/: pagination.html
